unbound: dont spam logs with queries/replies
Signed-off-by: Tulip Blossom <tulilirockz@proton.me>

--- a/unbound/unbound.conf
+++ b/unbound/unbound.conf
@@ -1,9 +1,9 @@
 server:
-    # If no logfile is specified, syslog is used
+    use-syslog: no
     logfile: "/var/log/unbound/unbound.log"
     verbosity: 1
-    log-queries: yes
-    log-replies: yes
+    # log-queries: yes
+    # log-replies: yes
 
     interface: 0.0.0.0
     port: 53
