syncthing: add volume for syncthing generic media
Signed-off-by: Tulip Blossom <tulilirockz@proton.me>

--- a/syncthing/Justfile
+++ b/syncthing/Justfile
@@ -4,3 +4,4 @@ default: create-directories deploy
 
 create-directories:
     mkdir -p "${HOME}/srv/jellyfin-media"
+    mkdir -p "${HOME}/srv/syncthing-media"
