--- a/searxng/Justfile
+++ b/searxng/Justfile
@@ -1,23 +1,3 @@
 import "../base.just"
 
-
-default: create-directories secrets deploy
-
-create-directories:
-    mkdir -p "${HOME}/srv/jellyfin-media"
-
-secrets: \
-    (gen-random-key "nextcloud_pgdb_pass") \
-    (gen-random-key "nextcloud_admin_pass")
-
-install-cronjobs:
-    #!/usr/bin/env bash
-    if [ "$(id -u)" == "0" ] ; then
-        INSTALL_LOCATION="/etc/systemd/system"
-    else
-        INSTALL_LOCATION="$HOME/.config/systemd/user"
-    fi
-    mkdir -p "${INSTALL_LOCATION}"
-    install -Dpm0644 -t "${INSTALL_LOCATION}" ./nextcloud-cron*
-    systemctl daemon-reload --user
-    systemctl enable --user --now nextcloud-cron.timer
+default: deploy
