unbound: dont be rootful within the container + clean up verbosity
Signed-off-by: Tulip Blossom <tulilirockz@posteo.com>

--- a/unbound/unbound.conf
+++ b/unbound/unbound.conf
@@ -1,12 +1,8 @@
 server:
-    use-syslog: no
-    logfile: "/var/log/unbound/unbound.log"
-    verbosity: 1
-    # log-queries: yes
-    # log-replies: yes
+    verbosity: 0
 
     interface: 0.0.0.0
-    port: 53
+    port: 5335
     do-ip4: yes
     do-udp: yes
     do-tcp: yes
@@ -60,7 +56,7 @@ server:
     so-rcvbuf: 1m
 
     # Ensure privacy of local IP ranges
-    # private-address: 192.168.0.0/16
+    private-address: 192.168.0.0/16
     private-address: 169.254.0.0/16
     private-address: 172.16.0.0/12
     private-address: 10.0.0.0/8
