radicale: ensure service actually binds to all stuff in network namespace
Signed-off-by: Tulip Blossom <tulilirockz@outlook.com>

--- a/radicale/radicale.ini
+++ b/radicale/radicale.ini
@@ -3,5 +3,8 @@ type = htpasswd
 htpasswd_encryption = autodetect
 htpasswd_filename = /srv/data/users
 
+[server]
+hosts = 0.0.0.0:5232, [::]:5232
+
 [storage]
 filesystem_folder = /srv/data/collections
