unbound: add more entries for local DNS
Signed-off-by: Tulip Blossom <tulilirockz@outlook.com>

--- a/unbound/unbound.conf
+++ b/unbound/unbound.conf
@@ -72,5 +72,9 @@ server:
 
     access-control: 192.168.0.0/16 allow
 
-    local-data-ptr: "192.168.15.19 taxifolia"
-    local-data: "taxifolia A 192.168.15.19"
+    local-data-ptr: "192.168.1.1 taxifolia"
+    local-data-ptr: "192.168.1.1 taxifolia.lan"
+    local-data-ptr: "192.168.1.1 taxifolia.local"
+    local-data: "taxifolia A 192.168.1.1"
+    local-data: "taxifolia.lan A 192.168.1.1"
+    local-data: "taxifolia.local A 192.168.1.1"
