fix(miniflux): forgot to add directory creation to persistent db path
Signed-off-by: Tulip Blossom <tulilirockz@outlook.com>

--- a/miniflux/Justfile
+++ b/miniflux/Justfile
@@ -1,6 +1,9 @@
 import "../base.just"
 
-default: secrets deploy
+default: create-directories secrets deploy
+
+create-directories:
+    mkdir -p "${HOME}/srv/miniflux-db"
 
 secrets: \
     (gen-random-key "miniflux_pgdb_pass") \
